# Duckov_Mod_Manager

./: .gitignore  Readme.md
app/: .gitignore  build_package.py  pyproject.toml  setup.iss
app/duckov_mod_manager/: .metadata  DuckovModManagerInstaller.iss  README.md  build_installer.ps1  pubspec.yaml  test_animation.dart
app/duckov_mod_manager/lib/: main.dart  old_theme_manager.dart
app/duckov_mod_manager/lib/components/: layout.dart
app/duckov_mod_manager/lib/page/: home.dart  mod_collections_page.dart  mod_order_page.dart  mod_page.dart  setting_page.dart  steam_workshop_page.dart  update_page.dart
app/duckov_mod_manager/lib/page/mod_page/: app_bar.dart  batch_controls.dart  bridge_status_banner.dart  bridge_status_indicator.dart  mod_card.dart  pagination_controls.dart  search_bar.dart  sort_controls.dart  sync_progress_bar.dart  sync_status_banner.dart
app/duckov_mod_manager/lib/services/: bridge_sync_service.dart  config_manager.dart  mod_manager.dart  mod_manager_bridge_client.dart  preload_manager.dart  process_manager.dart  route_service.dart  steam_workshop_service.dart  theme_manager.dart  version_manager.dart
app/duckov_mod_manager/lib/services/collections/: collection_service.dart  mod_collection.dart
app/duckov_mod_manager/lib/services/logging/: logger.dart
app/duckov_mod_manager/lib/services/mod_manager/: api_client.dart  async_websocket_client.dart  enhanced_mod_manager.dart  local_mod_models.dart  mod_scanner.dart  (+4 more)
app/duckov_mod_manager/test/: config_sync_test.dart  widget_test.dart
app/duckov_mod_manager/windows/: CMakeLists.txt
app/duckov_mod_manager/windows/runner/: Runner.rc  main.cpp
app/src/: app_layout.py  app_routes.py  config_manager.py  main.py
app/src/BaseComponents/: README.html  README.md  __init__.py  appLayout.py  buttonComponents.py  cardComponents.py  main.py.backup  textComponents.py  themeManager.py
app/src/components/: update_dialog.py
app/src/pages/: __init__.py  downloads_page.py  home_page.py  mod_collections_page.py  mods_page.py  settings_page.py  steam_workshop_page.py  update_page.py
app/src/services/: __init__.py  app_layout.py  app_routes.py  config_manager.py  mod_collection_manager.py  mod_manager.py  steam_workshop_service.py  theme_manager.py  version_manager.py
(+45 files in other folders)
