[project]
name = "app"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Duckov Mod Manager Team", email = "" }
]
dependencies = [
  "darkdetect>=0.8.0",
  "flet[all]==0.28.3",
]

[[index]]
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true

[tool.flet]
# org name in reverse domain name notation, e.g. "com.mycompany".
# Combined with project.name to build bundle ID for iOS and Android apps
org = "com.dcv_mmt"

# project display name that is used as an app title on Android and iOS home screens,
# shown in window titles and about app dialogs on desktop.
product = "Duckov Mod Manager"

# company name to display in about app dialogs
company = "dcv_mmt"

# copyright text to display in about app dialogs
copyright = "Copyright (C) 2025 by dcv_mmt"

[tool.flet.app]
path = "src"

#dependency-groups.dev = [
#    "flet[all]==0.28.3",
#]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
flet = {extras = ["all"], version = "0.28.3"}
