[project]
name = "app"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "DuckovModManager Team", email = "" }
]
dependencies = [
  "bs4>=0.0.2",
  "cryptography>=46.0.3",
  "darkdetect>=0.8.0",
  "flet[all]==0.28.3",
  "psutil>=7.1.3",
  "requests>=2.25.0",
]

[[index]]
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true

[tool.flet]
# org name in reverse domain name notation, e.g. "com.mycompany".
# Combined with project.name to build bundle ID for iOS and Android apps
org = "cn.waveyo"

# project display name that is used as an app title on Android and iOS home screens,
# shown in window titles and about app dialogs on desktop.
product = "Duckov Mod Manager"

# company name to display in about app dialogs
company = "WaveYo"

# copyright text to display in about app dialogs
copyright = "Copyright (C) 2025 by WaveYo"

[tool.flet.app]
path = "src"

#dependency-groups.dev = [
#    "flet[all]==0.28.3",
#]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
flet = {extras = ["all"], version = "0.28.3"}
